<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Switch to enable/disable dark mode -->
    <SwitchPreferenceCompat
        android:key="dark_mode"
        android:title="@string/dark_mode"
        android:summaryOn="@string/dark_mode_on"
        android:summaryOff="@string/dark_mode_off"
        android:defaultValue="false" />

    <!-- List to select app language (Arabic/English) -->
    <ListPreference
        android:key="language"
        android:title="@string/language"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values"
        android:defaultValue="en"
        android:dialogTitle="@string/language" />

    <!-- Switch to enable/disable notifications -->
    <SwitchPreferenceCompat
        android:key="notifications"
        android:title="@string/notifications"
        android:summaryOn="@string/notifications_on"
        android:summaryOff="@string/notifications_off"
        android:defaultValue="true" />
</PreferenceScreen>
